<resources>
    <string name="app_name">inventoryudacity</string>
    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a Product</string>

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_successful">Product saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_failed">Error with saving item</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    !-- Label for unit information in the editor [CHAR LIMIT=30] -->
    <string name="unit_dollar">$</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier">Supplier</string>

    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_phone_number">Phone Number</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Units for phone number [CHAR LIMIT=12] -->
    <string name="unit_supplier_phone">555-555-5555</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=10] -->
    <string name="hint_product_price">Price</string>
    <string name="product_content">The Products Table contains</string>
    <string name="prod">Products.</string>
    <string name="save_error">Error saving Product</string>
    <string name="prod_saved_id">Product saved with row id:</string>
    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a Product</string>
    <string name="edit_product">Edit a Product</string>
    <string name="add_product">Add a Product</string>
    <string name="unsaved_changes_dialog_msg">Changes not Saved!</string>
    <string name="discard">Discard!</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete Product</string>
    <string name="editor_delete_product_failed">Error Deleting Product</string>
    <string name="editor_delete_book_successful">Product Deleted Succesfully!</string>
    <string name="delete_button">delete</string>
    <string name="cancel">Cancel</string>
    <string name="decrement">decrease</string>
    <string name="increment">increase</string>
    <string name="increment_button">add product</string>
    <string name="category_supplier">Supplier</string>
    <string name="contact_supplier">Call</string>
    <string name="empty_name">Product Name cannot be blank.</string>
    <string name="empty_phone">Phone Number cannot be blank.</string>
    <string name="empty_price">Price cannot be blank.</string>
    <string name="empty_quantity">Quantity cannot be blank.</string>
    <string name="sale_product">Sell</string>
    <string name="sale_button">Sale</string>
    <string name="call_supplier">Call</string>
    <string name="can_sell_yes">In Stock</string>
    <string name="can_sell_no">Out of Stock</string>
    <string name="category_available">Available in Stock</string>
    <string name="no_stock">out of stock</string>
    <string name="one_sold">sold 1 product</string>
    <string name="sale_eror">error with sale</string>
    <string name="error_saving">Error saving product</string>
    <string name="product_saved">Product saved successfully</string>
    <string name="empty_supplier">Supplier name missing</string>

</resources>